# C_Learn

./: CMakeLists.txt  Max_test.c  main.c  test.c
Lib/: Gcd.c  Mult3.c  Pnumber.c  find_number.c  leap_year.c  number_desc.c
